# t5_base_api

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/v1/: __init__.py  translate.py
app/core/: config.py
app/internal/: __init__.py  translator.py
app/schema/: __init__.py  translate.py
tests/: conftest.py  test_main.py
