[tool.poetry]
name = "t5_base_api"
version = "0.1.0"
description = ""
authors = ["Karlmichael <phacic@live.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.79.0"}
loguru = "^0.6.0"
uvicorn = {version = "<0.18.0", extras = ["standard"]}
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
ipython = "^8.4.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
